# UBNDAI

./: .dockerignore  .env.example  .gitignore  .vercelignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  PRD_Officer_Flow_UBNDAI.md  README.md  alembic.ini  docker-compose.cache.yml  plan.md  pyproject.toml  steps.md
.claude/: README.md  settings.json
alembic/: env.py  script.py.mako
data/: legal_sources.json
docs/: API-Reference.md  Agent-Features.md  Authorization-Spec.md  CI-Explained.md  COST-REPORT.md  DEMO-SCRIPT.md  Deployment-Guide.md  EVAL-EVIDENCE.md  EVAL-METRICS.md  GUARDRAILS.md  KnowledgeBase-Guide.md  PRD-UBNDAI-MVP.md  UBNDAI-pitch-deck.pptx  VIDEO-SCRIPT.md  WORKLOG-2026-07-19.md  business-viability-pilot.md  hackathon-chat-experience.md  procedure-sync.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vercel.json  vite.config.ts
planning/: TEAM_PLAN.md  application-management-audit.md  application-management-plan-uiux.md  application-management-ui-spec.md
rules/: can_cuoc.yaml  giay_phep_xay_dung.yaml  ket_hon.yaml  khai_sinh.yaml  tam_tru.yaml
scripts/: _pyrun.sh  build_legal_index.py  build_pitch_deck.py  demo.ps1  eval_identify.py  export_ai_log.py  index_procedures.py  log_hook.py  seed_application_demo_data.py  seed_db.py  sync_procedures.py
src/: config.py  main.py
tests/: conftest.py  test_agent_regressions.py  test_ai_checker.py  test_application_analysis.py  test_application_demo_seed.py  test_application_management_api.py  test_application_management_contracts.py  test_application_management_extended_api.py  test_application_migrations.py  test_application_repository.py  test_application_runtime_persistence.py  test_application_state_machine.py  test_chat_experience.py  test_chat_flow.py  test_checklist_logic.py  test_citizen_submission_flow.py  test_contracts.py  test_draft_revision.py  test_drafts.py  test_guidance_bridge.py  test_huggingface_embeddings.py  test_identity_decoys.py  test_image_format_review_api.py  test_ocr_engine.py  (+20 more)
(+167 files in other folders)
