[project]
name = "c3-tthc-assistant"
version = "0.1.0"
description = "Trợ lý AI hướng dẫn và kiểm tra hồ sơ thủ tục hành chính"
requires-python = ">=3.11.9,<3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-anthropic>=1.0",
    "chromadb>=0.5",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
    "pillow>=10.0",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "aiosqlite>=0.20",
]
ocr-local = [
    "paddleocr>=2.8",
    "paddlepaddle>=2.6",
]
ocr-cloud = [
    "google-cloud-vision>=3.7",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
